# eventlog

./: MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst
examples/: consoletest.py  run-samples.sh  stash.py
src/: .gitignore
src/eventlog/: __init__.py  config.py  counter.py  event.py  event_pb2.py  handler.py  loglevel.py  proto.py  proto_msgpack.py  transport.py
tests/: console_test.py  failover_test.py  perf_test.py  serial_test.py
