#

[bdist_wheel]
universal=1

[metadata]
description-file = README.rst

[flake8]
exclude = build,.git,docs,*_pb2.py
max-line-length = 99
# E731 - assigning lambda expression
# E126 continuation line over-indented for hanging indent
# E127 over-indented continuation lines
# E128 under-indented continuation lines
ignore = E731, E126, E127, E128
